# cman

./: .gitignore  CHECKLIST.md  CMakeLists.txt  README.md  build.sh
include/: ast.h  build.h  cli.h  filesystem.h  parser.h  style.h
src/: ast.cpp  build.cpp  cli.cpp  filesystem.cpp  main.cpp  parser.cpp
